Fix footer styling on mobile

--- a/css/footer.css
+++ b/css/footer.css
@@ -4,11 +4,13 @@ footer {
   color: var(--text-color);
 
   overflow-x: hidden;
+
+  max-width: 100%;
 }
 
 footer p {
   position: absolute;
-  bottom: 30%;
+  bottom: 15%;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
@@ -21,10 +23,4 @@ footer a {
 
 footer svg {
   display: block;
-}
-
-@media (max-width: 650px) {
-  footer p {
-    bottom: 10%;
-  }
 }
